crates/tools/src/vet/snapshots/kcl_tools__vet__tests__test_expr_builder__build_json_with_str-2.snap
---
source: crates/tools/src/vet/tests.rs
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 5,
  "filename": "",
  "line": 1,
  "node": {
    "args": [],
    "config": {
      "column": 0,
      "end_column": 1,
      "end_line": 5,
      "filename": "",
      "line": 1,
      "node": {
        "items": [
          {
            "column": 0,
            "end_column": 1,
            "end_line": 5,
            "filename": "",
            "line": 1,
            "node": {
              "key": {
                "column": 4,
                "end_column": 9,
                "end_line": 3,
                "filename": "",
                "line": 3,
                "node": {
                  "is_long_string": false,
                  "raw_value": "\"age\"",
                  "type": "StringLit",
                  "value": "age"
                }
              },
              "operation": "Union",
              "value": {
                "column": 11,
                "end_column": 13,
                "end_line": 3,
                "filename": "",
                "line": 3,
                "node": {
                  "binary_suffix": null,
                  "type": "NumberLit",
                  "value": {
                    "type": "Int",
                    "value": 18
                  }
                }
              }
            }
          },
          {
            "column": 0,
            "end_column": 1,
            "end_line": 5,
            "filename": "",
            "line": 1,
            "node": {
              "key": {
                "column": 4,
                "end_column": 13,
                "end_line": 4,
                "filename": "",
                "line": 4,
                "node": {
                  "is_long_string": false,
                  "raw_value": "\"message\"",
                  "type": "StringLit",
                  "value": "message"
                }
              },
              "operation": "Union",
              "value": {
                "column": 15,
                "end_column": 30,
                "end_line": 4,
                "filename": "",
                "line": 4,
                "node": {
                  "is_long_string": false,
                  "raw_value": "\"This is Alice\"",
                  "type": "StringLit",
                  "value": "This is Alice"
                }
              }
            }
          },
          {
            "column": 0,
            "end_column": 1,
            "end_line": 5,
            "filename": "",
            "line": 1,
            "node": {
              "key": {
                "column": 4,
                "end_column": 10,
                "end_line": 2,
                "filename": "",
                "line": 2,
                "node": {
                  "is_long_string": false,
                  "raw_value": "\"name\"",
                  "type": "StringLit",
                  "value": "name"
                }
              },
              "operation": "Union",
              "value": {
                "column": 12,
                "end_column": 19,
                "end_line": 2,
                "filename": "",
                "line": 2,
                "node": {
                  "is_long_string": false,
                  "raw_value": "\"Alice\"",
                  "type": "StringLit",
                  "value": "Alice"
                }
              }
            }
          }
        ],
        "type": "Config"
      }
    },
    "kwargs": [],
    "name": {
      "column": 0,
      "end_column": 1,
      "end_line": 5,
      "filename": "",
      "line": 1,
      "node": {
        "ctx": "Load",
        "names": [
          {
            "column": 0,
            "end_column": 1,
            "end_line": 5,
            "filename": "",
            "line": 1,
            "node": "simple"
          }
        ],
        "pkgpath": ""
      }
    },
    "type": "Schema"
  }
}
