crates/tools/src/vet/snapshots/kcl_tools__vet__tests__test_expr_builder__build_json_with_str-3.snap
---
source: crates/tools/src/vet/tests.rs
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 1,
  "filename": "",
  "line": 1,
  "node": {
    "binary_suffix": null,
    "type": "NumberLit",
    "value": {
      "type": "Int",
      "value": 1
    }
  }
}
