crates/tools/src/vet/snapshots/kcl_tools__vet__tests__test_expr_builder__build_json_with_str-8.snap
---
source: crates/tools/src/vet/tests.rs
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 3,
  "filename": "",
  "line": 1,
  "node": {
    "args": [],
    "config": {
      "column": 0,
      "end_column": 1,
      "end_line": 3,
      "filename": "",
      "line": 1,
      "node": {
        "items": [
          {
            "column": 0,
            "end_column": 1,
            "end_line": 3,
            "filename": "",
            "line": 1,
            "node": {
              "key": {
                "column": 4,
                "end_column": 17,
                "end_line": 2,
                "filename": "",
                "line": 2,
                "node": {
                  "is_long_string": false,
                  "raw_value": "\"float_value\"",
                  "type": "StringLit",
                  "value": "float_value"
                }
              },
              "operation": "Union",
              "value": {
                "column": 19,
                "end_column": 23,
                "end_line": 2,
                "filename": "",
                "line": 2,
                "node": {
                  "binary_suffix": null,
                  "type": "NumberLit",
                  "value": {
                    "type": "Float",
                    "value": 0.33
                  }
                }
              }
            }
          }
        ],
        "type": "Config"
      }
    },
    "kwargs": [],
    "name": {
      "column": 0,
      "end_column": 1,
      "end_line": 3,
      "filename": "",
      "line": 1,
      "node": {
        "ctx": "Load",
        "names": [
          {
            "column": 0,
            "end_column": 1,
            "end_line": 3,
            "filename": "",
            "line": 1,
            "node": "only_with_float"
          }
        ],
        "pkgpath": ""
      }
    },
    "type": "Schema"
  }
}
